feat(sync): Add Slack and Atlassian OAuth integrations
What:
- Add Slack OAuth 2.0 flow with user token support
- Add Atlassian OAuth 2.0 (3LO) flow with PKCE
- Add shared OAuth callback server module
- Add sync services for Slack messages and Atlassian (Jira/Confluence)
- Add background sync service coordinator
- Add Tauri commands: connect_slack, connect_atlassian, select_atlassian_resource
- Add comprehensive unit tests (30 tests covering types, clients, auth flows)

Why:
- Implements Phase 2 data integration requirements from docs/guides/phase-2-data-integration.md
- Enables the app to connect to external services and sync content locally

How:
- Created modular structure: sync/slack/{types,client,sync}, sync/atlassian/{types,client,sync}
- Extracted shared OAuth callback logic into sync/oauth.rs
- Used local TCP listener on localhost ports 8374 (Slack) and 8375 (Atlassian) for OAuth redirects
- All synced content is encrypted using the existing CryptoService before storage
- HTTP status checks added for robustness on all API calls

Impact:
- New Tauri commands available to frontend for connecting integrations
- New dependencies: open, urlencoding (for OAuth browser launch and URL encoding)

Testing:
- cargo clippy -- -D warnings (clean)
- cargo test (30 passed)
- pnpm -s lint (clean)
- pnpm -s tsc --noEmit (clean)

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,6 +31,11 @@ serde_json = "1"
 aes-gcm = "0.10"
 rand = "0.8"
 base64 = "0.22"
+sha2 = "0.10"
+
+# OAuth / Browser
+open = "5"
+urlencoding = "2"
 
 # OS Keychain
 keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
