--- a/package.json
+++ b/package.json
@@ -7,39 +7,45 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "preview": "vite preview",
     "tauri": "tauri"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "@tanstack/react-query": "^5.76.0",
-    "zustand": "^5.0.5",
     "@headlessui/react": "^2.2.4",
-    "lucide-react": "^0.511.0",
-    "clsx": "^2.1.1",
+    "@tanstack/react-query": "^5.76.0",
     "@tauri-apps/api": "^2.5.0",
     "@tauri-apps/plugin-notification": "^2.2.2",
     "@tauri-apps/plugin-shell": "^2.2.1",
-    "date-fns": "^4.1.0"
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.511.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tailwindcss/vite": "^4.1.8",
     "@tauri-apps/cli": "^2.9.6",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "jsdom": "^27.4.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.8",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
-    "tailwindcss": "^4.1.8",
-    "@tailwindcss/vite": "^4.1.8",
-    "postcss": "^8.5.6",
-    "autoprefixer": "^10.4.21"
+    "vitest": "^4.0.17"
   }
 }
