feat(phase-5): Add MVP polish - notifications, offline support, analytics, system tray
System Tray with Pipeline Status:
- Add system tray icon with menu (Show, Sync Now, Quit)
- Create PipelineManager to track active tasks and history
- Show real-time pipeline status in header dropdown
- Display task progress, completion status, and recent history

Notifications:
- Add NotificationService for system notifications
- Support daily/weekly digest, sync complete, and error notifications
- Configure notification plugin in tauri.conf.json

Offline Support:
- Add useConnectionStatus hook for online/offline detection
- Create OfflineIndicator component showing cached data notice
- Add SyncQueue for queuing sync requests when offline

Analytics:
- Add AnalyticsService for local usage tracking
- Track views, syncs, AI requests, and source clicks
- Add analytics commands (track_event, get_analytics_summary)

Frontend Hooks:
- useNotifications for listening to backend notification events
- usePipeline for tracking pipeline status updates
- useAnalytics for tracking user interactions

macOS Build Configuration:
- Update tauri.conf.json with macOS bundle settings
- Add tray icon configuration
- Set minimum system version to 10.15

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,7 +10,7 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 # Tauri
-tauri = { version = "2", features = ["devtools"] }
+tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
 tauri-plugin-notification = "2"
 tauri-plugin-shell = "2"
 
