feat(gemini): Add Google Cloud service account authentication support
What:
- Add OAuth2/JWT authentication for Google Cloud service accounts
- Support both AI Studio API keys and Vertex AI service accounts
- Add token caching with automatic refresh (5-min buffer before expiry)
- Add connection verification endpoint for testing credentials
- Add timezone offset support for digest date calculations
- Extract GeminiSettings component for better modularity

Why:
- Enable enterprise users to authenticate via service account JSON files
- Vertex AI provides better quotas and enterprise features
- Users need to verify credentials work before relying on them
- Digest dates should respect user's local timezone

How:
- GeminiClient now supports two auth modes: ApiKey and ServiceAccount
- ServiceAccount auth generates JWT, exchanges for OAuth2 access token
- Token cache uses RwLock for thread-safe access with expiry tracking
- Frontend provides separate UI sections for each auth method
- Commands detect auth type and route to appropriate client

Impact:
- New settings UI with Google AI Studio and Vertex AI sections
- Users can upload service account JSON and specify region
- Verify Connection button tests credentials before use
- Daily/weekly digests now use local timezone for date boundaries

Testing:
- pnpm lint: passed
- pnpm typecheck: passed
- pnpm test: 124 tests passed
- cargo clippy: passed (0 warnings)
- cargo build: passed

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -40,6 +40,9 @@ urlencoding = "2"
 # OS Keychain
 keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
 
+# JWT for service account auth
+jsonwebtoken = "9"
+
 # Utilities
 thiserror = "2"
 uuid = { version = "1", features = ["v4"] }
