--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
+    "@react-pdf/renderer": "^4.3.2",
     "@tanstack/react-query": "^5.76.0",
     "@tauri-apps/api": "^2.5.0",
     "@tauri-apps/plugin-notification": "^2.2.2",
