--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@tanstack/react-query": "^5.76.0",
     "@tauri-apps/api": "^2.5.0",
     "@tauri-apps/plugin-notification": "^2.2.2",
+    "@tauri-apps/plugin-process": "^2.3.1",
     "@tauri-apps/plugin-shell": "^2.2.1",
+    "@tauri-apps/plugin-updater": "^2.9.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.511.0",
