feat(ui): Add Check for Updates to Settings and tray menu
What:
- Add new "About" section in Settings with app version and update controls
- Add "Check for Updates" menu item to system tray
- Extract update logic into reusable useUpdater hook
- Refactor UpdateNotification to use shared hook
- Auto-set version from git tag in CI release workflow
- Fix updater endpoint URL case sensitivity (TannerBurns vs tannerburns)

Why:
- Users need a way to manually check for updates from Settings
- Tray menu provides quick access to update check without opening app
- Shared hook enables consistent update behavior across components
- CI automation eliminates manual version bumps before releases

How:
- Created src/hooks/useUpdater.ts with state machine for update flow
- Added AboutSettings component to SettingsView with version display
- Extended tray menu in Rust backend with check_updates item
- Added tray:check-for-updates event handler in App.tsx
- Release workflow now extracts version from tag and updates tauri.conf.json

Impact:
- New "About" section appears in Settings navigation
- "Check for Updates" appears in system tray menu
- Version displayed in About section matches release tag
- Releases no longer marked as prerelease by default

Testing:
- pnpm run lint (pass)
- pnpm run build (pass)
- pnpm run test (217 tests pass)
- cargo clippy -- -D warnings (pass)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -123,6 +123,21 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Update version from tag
+        shell: bash
+        run: |
+          VERSION="${GITHUB_REF_NAME#v}"
+          echo "Setting version to: $VERSION"
+          
+          if command -v jq &> /dev/null; then
+            jq --arg v "$VERSION" '.version = $v' src-tauri/tauri.conf.json > tmp.json && mv tmp.json src-tauri/tauri.conf.json
+          else
+            sed -i.bak "s/\"version\": \"[^\"]*\"/\"version\": \"$VERSION\"/" src-tauri/tauri.conf.json
+            rm -f src-tauri/tauri.conf.json.bak
+          fi
+          
+          grep '"version"' src-tauri/tauri.conf.json
+
       - name: Build Tauri app
         uses: tauri-apps/tauri-action@v0
         env:
@@ -140,7 +155,7 @@ jobs:
           releaseName: 'Companion ${{ github.ref_name }}'
           releaseBody: 'See the assets to download this version and install.'
           releaseDraft: false
-          prerelease: ${{ contains(github.ref, 'beta') || contains(github.ref, 'alpha') }}
+          prerelease: false
           args: --target ${{ matrix.target }}
 
       - name: Get version from tag
